# hina_ssi

./: CMakeLists.txt  LICENSE  README.md  build.sh  launch.sh  launch_melodic.sh
DEM files/: testHeight.csv  testLabels.csv
gz_hina/: astrowheel.dae  box.dae  icosphere.dae  test.world  test_melodic.world  wheel_lowpoly.dae
gz_hina/media/: test.tif  test_dem.csv  testdem.gtif
gz_hina/media/material/: Soil.material
gz_hina/media/materials/: Soil.material
src/: MeshGenerator.cpp  Soil.cpp  hina_ssi_plugin.cpp  soil.cpp
src/common/: CMakeLists.txt  dem.h  geometry.cpp  geometry.h  plugin_config.cpp  soil.cpp  soil.h  soil_config.h  soil_data.h
src/common/dem/: dem.h  dem_loader.h
src/common/field/: base_vertex_sampler.h  chunk.h  chunked_field.h  chunked_field_location.h  field.h  field_vertex.h  uniform_field.h  vertex_dims.h
src/common/soil/: sandbox_config.h  soil.cpp  soil.h  soil_data.h
src/hina_ssi_physics/: CMakeLists.txt  hina_ssi_physics_plugin.cpp
src/hina_ssi_physics/dem/: dem.h  dem_loader.h  dem_vertex_sampler.h
src/hina_ssi_physics/sandbox/: sandbox_config.h  sandbox_vertex_sampler.h
src/hina_ssi_physics/soil/: soil.cpp  soil.h  soil_chunk.cpp  soil_chunk.h  soil_chunk_location.h  soil_data.h  soil_physics_params.h  soil_vertex.h  soil_vertex_sampler.h
src/hina_ssi_visual/: CMakeLists.txt  height_attributes.h  hina_ssi_visual_plugin.cpp  mesh_generator.cpp  ogre_soil_renderer.cpp  render_config.cpp  render_config.h  visual_chunk.h
src/msgs/: BodyPhysics.proto  CMakeLists.txt  Soil.proto  SoilChunk.proto  Triangles.proto
src/physics/: CMakeLists.txt  hina_ssi_physics_plugin.cpp
src/physics/dem/: dem.h  dem_loader.h  dem_vertex_sampler.h
src/physics/sandbox/: sandbox_vertex_sampler.h
src/physics/scm/: terramechanics.cpp  terramechanics.h
src/physics/soil/: body_context.h  footprint.h  soil.cpp  soil.h  soil_chunk.cpp  soil_chunk.h  soil_chunk_location.h  soil_physics_params.h  soil_vertex.h  soil_vertex_sampler.h  triangle_context.h
src/visual/: CMakeLists.txt  body_info_renderer.cpp  height_attributes.h  hina_ssi_visual_plugin.cpp  ogre_soil_renderer.cpp  triangle_info_renderer.cpp  visual_body_physics.h  visual_chunk.h  visual_triangles.h
